src/test/deca/syntax/invalid/lexer/include_tests/include_noSharp_lex-lex.corr
IDENT: [@0,164:170='include',<47>,11:0]
STRING: [@1,172:183='"Math.decah"',<49>,11:8]
